re PR c++/71100 (Internal compiler error while calling a pointer to member function that throws)

PR c++/71100
	* cgraph.c (cgraph_edge::redirect_call_stmt_to_callee): Don't drop
	lhs if it has TREE_ADDRESSABLE type.

	* g++.dg/opt/pr71100.C: New test.

From-SVN: r236430